<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.screens.edit_food_page.screen.EditFoodFragment">

    <EditText
        android:id="@+id/foodTitleET"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="@dimen/card_text_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/custom_input"
        android:paddingStart="10dp"
        android:autofillHints=""
        android:inputType="text"
        android:hint="@string/enter_food_title"/>

    <EditText
        android:id="@+id/caloriesET"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="@dimen/card_text_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/foodTitleET"
        android:background="@drawable/custom_input"
        android:paddingStart="10dp"
        android:autofillHints=""
        android:inputType="number"
        android:hint="@string/enter_calories"/>

    <EditText
        android:id="@+id/proteinsET"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="@dimen/card_text_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/caloriesET"
        android:background="@drawable/custom_input"
        android:paddingStart="10dp"
        android:autofillHints=""
        android:inputType="numberDecimal"
        android:hint="@string/enter_proteins"/>

    <EditText
        android:id="@+id/fatsET"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="@dimen/card_text_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/proteinsET"
        android:background="@drawable/custom_input"
        android:paddingStart="10dp"
        android:autofillHints=""
        android:inputType="numberDecimal"
        android:hint="@string/enter_fats"/>

    <EditText
        android:id="@+id/carbsET"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="@dimen/card_text_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fatsET"
        android:background="@drawable/custom_input"
        android:paddingStart="10dp"
        android:autofillHints=""
        android:inputType="numberDecimal"
        android:hint="@string/enter_carbs"/>

    <Button
        android:id="@+id/applyBTN"
        android:text="@string/apply_btn"
        android:layout_margin="20dp"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@id/carbsET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/none"/>

    <Button
        android:id="@+id/deleteBTN"
        android:text="@string/delete"
        android:layout_margin="20dp"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/delete_btn"
        android:hint="@string/none"/>
</androidx.constraintlayout.widget.ConstraintLayout>